--- a/src/index.html
+++ b/src/index.html
@@ -11,19 +11,42 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <h1>Carlos Saito</h1>
-  <h2>Full-stack developer in Stockholm</h2>
+  <div class="container">
+    <div class="column-1">
+      <div class="saito-style-xl">saito.style</div>
+      <div>
+        Hello! My name is Carlos Saito and am a full-stack developer at KTH Royal Institute of Technology in Stockholm, Sweden.
+      </div>
+    </div>
+    <div class="column-2">
+      I started using <span class="saito-style"><span>saito style</span></span> as joke-name because it reminds me on a Megaman sticker that I had when I was a kid.
+    </div>
+    <a href="mailto:carlos@saito.style" class="column-3">
+      Send me something: carlos@<span class="saito-style"><span>saito.style</span></span>
+    </a>
+    <div class="column-4">
+      <div>You can also follow me on <a href="https://instagram.com/with.saito.style">instagram</a>, <a href="https://twitter.com/saito_style">twitter</a>, <a href="https://github.com/exacs">github</a></div>
+    </div>
+    <div class="column-5">
+      <div>Oh, you have quite a big screen. Let's embed this website in it</div>
+      <script>
+        const q = location.search.slice(1);
+        if (q === "") {
+          document.write('<iframe src="?2"></iframe>')
+        } else {
+          const q2 = parseInt(q, 10);
 
-  <div>
-    Hello! My name is Carlos Saito and am a full-stack developer at KTH Royal Institute of Technology.
-
-    The "Saito Style" thing started as a joke because when I was a child I had a Megaman sticker that I found funny.
+          if (q2 < 5) {
+            document.write(`<iframe src="?${q2+1}"></iframe>`)
+          }
+        }
+      </script>
+    </div>
   </div>
-  <div>
-    <h1>Network</h1>
-    <div>carlos@saito.style</div>
-    <div>instagram with.saito.style</div>
-    <div>links.saito.style</div>
+  <div class="number">
+    <script>
+      document.write(location.search.slice(1));
+    </script>
   </div>
 </body>
 </html>
