--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,10 @@
       </div>
     </div>
     <div class="column-2">
-      I started using <span class="saito-style"><span>saito style</span></span> as joke-name because it reminds me on a Megaman sticker that I had when I was a kid.
+      I started using <span class="saito-style l-1"><span>saito style</span></span> as joke-name because it reminds me on a Megaman sticker that I had when I was a kid.
     </div>
     <a href="mailto:carlos@saito.style" class="column-3">
-      Send me something: carlos@<span class="saito-style"><span>saito.style</span></span>
+      Send me something: carlos@<span class="saito-style l-2"><span>saito.style</span></span>
     </a>
     <div class="column-4">
       <div>You can also follow me on <a href="https://instagram.com/with.saito.style">instagram</a>, <a href="https://twitter.com/saito_style">twitter</a>, <a href="https://github.com/exacs">github</a></div>
